1.1.9
    * added install generator
1.1.8
    * depend on redhillonrails_core 1.1.2
1.1.7
    * handle references for change_column
1.1
    * create index within foreign key (auto index)
    * global configuration for: auto_index and on_update/on_delete actions
1.0.2
    * rails 3 generator
1.0.1
    * used autoload
    * rails 3 compatibility
1.0.0
    * renamed from foreign_key_migration to automatic_foreign_key
    * added gemspec 