@@ -1,5 +1,6 @@
 1.1.9
     * added install generator
+    * fixed doubled auto-index inside Schema.define
 1.1.8
     * depend on redhillonrails_core 1.1.2
 1.1.7
